css/styles.css
body {
    background-color: #4BB648;
/ / background-image : url('images/noisy-texture-200x200-o15-d19-c-c7c7c7-t0.png');
}

#body {
    min-height: 500px;
}

#body img {
    width: 100%;
}

p {
    color: black;
    font-family: Ubuntu, sans-serif;
}

h2 {
    font-family: Ubuntu Mono Bold, sans-serif;
    color: black;
    margin-top: 10px;
    margin-bottom: 20px;
}

#rutgers {
    width: 100%;
    max-width: 770px;
}

.clover {
    display: inline-block;
    position: relative;
    top: -100px;
}

footer div {
    margin-left: auto;
    margin-right: auto;
}

.navbar {
    background-color: #33CC33;
    color: black;
/ / height : 60 px;
}

.navbar-nav {
    height: 100%;
}

.navbar div {
    height: 100%;
}

.active {
    background-color: #F6EB13;
}

.dropdown-menu {
    background-color: #33CC33;
}

.dropdown-menu > .active > a {
    background-color: #F6EB13;
}

.nav.navbar-nav li a {
    color: black;
    font-family: 'Ubuntu', sans-serif;
    font-size: 1.2em;
    height: 60px;
    padding: 18px;
    text-decoration: none;
}

.nav.navbar-nav li a:hover {
    background-color: #F6EB13;
}

.nav.navbar-nav li a:focus {
    background-color: #F6EB13;
}

.navbar-brand {
    padding: 5px;
    height: 60px;
}

.navbar-brand img {
    height: 100%;
    display: inline;
    padding-left: 5px;
    padding-right: 5px;
    margin-left: 15px;
    margin-right: 15px;
}

.navbar-toggle {
    border: 2px #F6EB13 solid;
}

.navbar-toggle .icon-bar {
    display: block;
    width: 22px;
    height: 2px;
    background-color: #F6EB13;
    border-radius: 1px;
}

a {
    color: #264d26;
    text-decoration: underline;
}

a:hover {
    color: #55701e;
    text-decoration: underline;
}

